Weaver: use java.io.File more efficiently
Java cannot help us with cross-platform issues if we do not give it
a chance.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>